# lqcd-neuron

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  architecture.mmd  comparison.md  quickstart.md
examples/: 01_plaquette.py  02_wilson_dslash.py  03_cg_inversion.py  bench_dslash.py
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
paper/: COMMENTARY.md  lqcd_neuron.tex
scripts/: connect_inf2.sh  neuron_trace.py  run_tests.sh  setup_inf2.sh
src/lqcd_neuron/: __init__.py  params.py
src/lqcd_neuron/blas/: __init__.py  lattice_blas.py
src/lqcd_neuron/core/: __init__.py  gauge_field.py  lattice.py  spinor_field.py
src/lqcd_neuron/dirac/: __init__.py  clover.py  gamma.py  wilson.py
src/lqcd_neuron/neuron/: __init__.py  compiler.py  device.py
src/lqcd_neuron/observables/: __init__.py  plaquette.py  polyakov.py
src/lqcd_neuron/solvers/: __init__.py  bicgstab.py  cg.py
tests/: test_core.py  test_dirac.py  test_observables.py  test_solvers.py
