[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lqcd-neuron"
version = "0.1.0"
description = "QUDA-inspired Lattice QCD SDK for AWS Trainium (Trn1) and Inferentia (Inf2)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["lattice-qcd", "aws-neuron", "trainium", "inferentia", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
neuron = [
    "torch-neuronx>=2.1",
    "neuronx-cc>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/JGalego/lqcd-neuron"
Documentation = "https://lqcd-neuron.readthedocs.io"

[tool.hatchling.build.targets.wheel]
packages = ["src/lqcd_neuron"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
